2009-11-14  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/bdiv_qr.c: Make it actually work.  Also use passed-in
	scratch space.

	* mpn/generic/mu_bdiv_qr.c: Reset FFT parameters for each call.

2009-11-12  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86/k7/gcd_1.asm (MASK): Compute from MAXSHIFT.

2009-11-11  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/binvert.c: Simplify, fix comments.

	* tests/devel/try.c: Test mpn_invert and mpn_binvert.

	* tests/refmpn.c (refmpn_invert, refmpn_binvert): New functions.
	* tests/tests.h: Declare new functions.

2009-11-10  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in: Supply compiler options for atom in 32-bit mode.

	* acinclude.m4 (X86_64_PATTERN): New.
	* configure.in: Setup and use X86_64_PATTERN.

	* mpn/x86_64/fat/fat.c: New file.
	* mpn/x86_64/fat/fat_entry.asm: New file.
	* mpn/x86_64/fat: Copy C placeholder files from mpn/x86/fat.
	* mpn/x86_64/x86_64-defs.m4 (CPUVEC_FUNCS_LIST): New, copied from
	mpn/x86/x86-defs.m4.
	* configure.in: Move down x86 fat setup code until after ABI has been
	determined; generalize to handle x86_64.

2009-11-09  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86/fat/mod_1.c: New file.

	* acinclude.m4 (GMP_C_FOR_BUILD_ANSI): Avoid poor quoting.

2009-11-08  Torbjorn Granlund  <tege@gmplib.org>

	* gmp-impl.h (MPN_LOGOPS_N_INLINE): Rewrite, update interface.  Callers
	updated.
	* mpn/generic/logops_n.c: New file.
	* doc/gmp.texi (Low-level Functions): Document logical mpn functions.

2009-11-07  Torbjorn Granlund  <tege@gmplib.org>

	* tune/speed.h (SPEED_ROUTINE_MPN_MULMOD_BNM1): Adapt to new
	mpn_mulmod_bnm1 interface.

2009-11-07  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/mulmod_bnm1.c: New interface, with size
	specified for all operands in mpn_mulmod_bnm1.
	* gmp-impl.h: Changed mpn_mulmod_bnm1 prototype.

2009-11-05  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86/k7/gcd_1.asm: Actually use div-reduced value.
	Mnemonic cleanup.
